<resources>
    <string name="app_name">Pokeout</string>
    <string name="Confirm">Zatwierdż</string>
    <string name="Back">Powrót</string>
    <string name="Phone">Numer Telefonu</string>
    <string name="Brith">Data Urodzin</string>
    <string name="Name">Imie</string>
    <string name="Male">Mężczyzna</string>
    <string name="Female">Kobieta</string>
    <string name="Description">Opis</string>
    <string name="categoryBest">Popularne</string>
    <string name="categoryLiked">Ulubione</string>
    <string name="categorySuggest">Polecane</string>
    <string name="categoryBlank">Puste</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CategoryName">Nazwa Kategorii</string>
    <string name="Add">Dodaj</string>
    <string name="User_Name">Nazwa użytkownika</string>
    <string name="Sex">Płeć</string>
    <string name="Count">Liczba</string>
    <string name="Message">Wiadomość...</string>
    <string name="send">Wyślij</string>
    <string name="menu_profile">Profil</string>
    <string name="navigation_drawer_open">drower</string>
    <string name="navigation_drawer_close">close</string>
    <string name="Distance">Odległość</string>
    <string name="City">Miasto</string>
    <string name="forgot_password_msg">Aby zresetować hasło, wprowadź swój email, naciśnij przycisk i podążaj dalszymi instrukcjami zawartymi w mailu. </string>
    <string name="btn_reset_password">Zresetuj hasło</string>
    <string name="btn_back">Cofnij</string>
    <string name="Km">Km</string>
    <string name="Data">Data</string>
    <string name="DeleteMsg">Czy na pewno chcesz skasować konto?</string>
    <string name="Email">Email</string>
    <string name="Password">Hasło</string>
    <string name="Empty">Nie ma wiecej propozycji :(</string>
    <string name="PasswordForgot">Zapomniałeś hasła?</string>
    <string name="Login">Zaloguj</string>
    <string name="CreatAccount">Nie masz jeszcze konta? Stwórz je</string>
    <string name="CreatedAccount">Stwórz konto</string>
    <string name="ExistAccount">Posiadasz juz konto? Zaloguj się</string>
    <string name="Radius">Zasięg</string>
    <string name="Delete">Usuń</string>
    <string name="Send">Wyślij</string>


</resources>
