<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_dialog"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/DeleteMsg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/eEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email" />

    <EditText
        android:id="@+id/ePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password">

        <requestFocus />
    </EditText>
</LinearLayout>